--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,5 +1,7 @@
-<!-- left data  -->
-<div class="p-3 m-3 d-flex justify-content-between align-content-center" style="font-size: 11px;" >
+
+<div class="header p-3 border-bottom">
+    <!-- left data  -->
+<div class="m-3 d-flex justify-content-between align-content-center" style="font-size: 11px;" >
 
   <div class="border-end me-3">
   <h6>Communidad</h6>
@@ -126,4 +128,4 @@
     </div>
   </ng-container>
   <!--end::Header menu toggle-->
-  
+</div>
