--- a/src/app/miperfile/miperfile.component.html
+++ b/src/app/miperfile/miperfile.component.html
@@ -1,1 +1,10 @@
-<p>hello body</p>
+<!-- page title  -->
+<div class="d-flex">
+    <h2>Mi Perfile</h2>
+    <h6 class="ms-3">Administracion de perfile</h6>
+</div>
+<div class="main">
+    <div class="back">
+        
+    </div>
+</div>
