--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,65 +1,77 @@
+<div class="d-flex flex-column flex-shrink-0  bg-body-tertiary bar">
 <!-- logo  -->
-<div class="logo d-flex">
-    <img src="../../assets/images/logo/pakoalogo 1.png" alt="pakoa logo" class="me-5">
-    <img src="../../assets/images/logo/antorchaff 1.png" alt="logo icon">
+<div class="logo d-flex container-fluid p-4">
+    <img src="../../assets/images/logo/pakoalogo 1.png" alt="pakoa logo" width="142" height="56" class="me-3">
+    <img src="../../assets/images/logo/antorchaff 1.png" alt="logo icon" width="47" height="48">
 </div>
 
+<!-- search box -->
+<form action="#" class="m-4">
+    <input type="search" class="search form-control p-2 border-0 shadow" placeholder="&#xF52A; Search">
+</form>
+
+
 <!-- menu  -->
-    <div class="menu menu-column menu-rounded menu-sub-indention px-3" id="#kt_app_sidebar_menu" data-kt-menu="true"
-        data-kt-menu-expand="false">
+    <ul class="nav nav-pills p-3 flex-column mb-auto">
         <!-- Dashboard -->
-        <div class="menu-item">
-            <a class="menu-link without-sub" routerLink="" routerLinkActive="active">
-                <span class="menu-icon">
-                    
-                </span>
-                <span class="menu-title">Mi Perfile</span>
+        <li class="nav-item">
+            <a class="nav-link text-white" routerLink="">
+                    <img src="../../assets/images/icons/Vector.png" width="20" height="20" class="me-2" alt="user icon">Mi Perfile
             </a>
-        </div>
+        </li>
 
         <!-- Layout builder -->
-        <div class="menu-item">
-            <a class="menu-link without-sub" routerLink="/builder" routerLinkActive="active">
-                <span class="menu-icon">
-                
-                </span>
-                <span class="menu-title">Captura Venta</span>
+        <li class="nav-item">
+            <a class="nav-link text-white" routerLink="/builder">
+                    <img src="../../assets/images/icons/Vector (1).png" width="16" height="16" class="me-2" alt="user icon">Captura Venta
             </a>
-        </div>
+        </li>
 
-        <div class="menu-item">
-            <a class="menu-link without-sub" routerLink="/builder" routerLinkActive="active">
-                <span class="menu-icon">
-                
-                </span>
-                <span class="menu-title">Captura Venta OC</span>
+        <li class="nav-item">
+            <a class="nav-link text-white" routerLink="/builder" routerLinkActive="active">
+                    <img src="../../assets/images/icons/Vector (1).png" width="16" height="16" class="me-2" alt="user icon">Captura Venta OC
             </a>
-        </div>
+        </li>
 
-        <div class="menu-item">
-            <a class="menu-link without-sub" routerLink="/builder" routerLinkActive="active">
-                <span class="menu-icon">
-                
-                </span>
-                <span class="menu-title">Ventas</span>
+        <li class="nav-item">
+            <a class="nav-link text-white" routerLink="/builder" routerLinkActive="active">
+                    <img src="../../assets/images/icons/Group 1.png" width="16" height="16" class="me-2" alt="user icon">Ventas
             </a>
-        </div>
+        </li>
 
-        <div class="menu-item">
-            <a class="menu-link without-sub" routerLink="/builder" routerLinkActive="active">
-                <span class="menu-icon">
-                
-                </span>
-                <span class="menu-title">Mis Ingresos</span>
+        <li class="nav-item">
+            <a class="nav-link text-white" routerLink="/builder" routerLinkActive="active">
+                    <img src="../../assets/images/icons/Vector (2).png" width="16" height="16" class="me-2" alt="user icon">Mis Ingresos
             </a>
-        </div>
+        </li>
 
-        <div class="menu-item">
-            <a class="menu-link without-sub" routerLink="/builder" routerLinkActive="active">
-                <span class="menu-icon">
-                
-                </span>
-                <span class="menu-title">Mi Diagrama</span>
+        <li class="nav-item">
+            <a class="nav-link text-white" routerLink="/builder" routerLinkActive="active">
+                    <img src="../../assets/images/icons/Vector (3).png" width="16" height="16" class="me-2" alt="user icon">Mi Diagrama
             </a>
-        </div>
+        </li>
+
+        <li class="nav-item">
+            <a class="nav-link text-white" routerLink="/builder" routerLinkActive="active">
+                    <img src="../../assets/images/icons/flag.png" width="16" height="16" class="me-2" alt="user icon">Mi Paginas
+            </a>
+        </li>
+
+        <li class="nav-item">
+            <a class="nav-link text-white" routerLink="/builder" routerLinkActive="active">
+                 <img src="../../assets/images/icons/Group 2.png" width="16" height="16" class="me-2" alt="user icon">Agrigar Hijos
+            </a>
+        </li>
+
+        <li class="nav-item">
+            <a class="nav-link text-white" routerLink="/builder" routerLinkActive="active">
+                    <img src="../../assets/images/icons/Group 4.png" width="16" height="16" class="me-2" alt="user icon">Mi Comunidad
+            </a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link text-white" routerLink="/builder" routerLinkActive="active">
+                    <img src="../../assets/images/icons/Group 3.png" width="16" height="16" class="me-2" alt="user icon">Reportes
+            </a>
+        </li>
+    </ul>
 </div>
