mi perfile div1

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,131 +1,75 @@
+<div class="header p-3 border-bottom d-flex justify-content-between">
+  <!-- left data  -->
+  <div class=" d-flex align-items-center" style="font-size: 11px;">
 
-<div class="header p-3 border-bottom">
-    <!-- left data  -->
-<div class="m-3 d-flex justify-content-between align-content-center" style="font-size: 11px;" >
-
-  <div class="border-end me-3">
-  <h6>Communidad</h6>
-  <div style="color: red;">Perdida: MX0.00</div>
-  <div>Comision: MX 1,525.20</div>
-</div>
-
-<div class="border-end me-3">
-  <h6>Instalado</h6>
-  <div>30 Dias: MX33.140.00</div>
-  <div>En Semena: MX990.00</div>
-</div>
-
-<div class="border-end">
-  <h6>Cancelado</h6>
-  <div style="color: red;">En Semana: MX0.00</div>
-  <div style="color: red;">Semana Ant: MX480.00</div>
-</div>
-
-<div>
-  <h6>Caidas</h6>
-  <div style="color: red;">En Semana: 0</div>
-  <div style="color: red;">Sem Anterior: 0</div>
-</div>
-
-<div>
-<img src="../../assets/images/An blue turquoise lotus emitting a bright blue lig 1 1.png" width="88" height="61" alt="blue flower"/>
-</div>
-
-<!-- icons  -->
-<!--begin::Theme mode-->
-<div class="app-navbar-item">
-    <!-- <app-theme-mode-switcher [toggleBtnClass]="btnClass" toggleBtnClass="{`btn-active-light-primary btn-custom ${toolbarButtonHeightClass}`}"></app-theme-mode-switcher> -->
-  </div>
-  <!--end::Theme mode-->
-  
-  <!--begin::Search-->
-  <div class="app-navbar-item align-items-stretch">
-    <!--begin::Search-->
-    <div id="kt_header_search" class="header-search d-flex align-items-stretch" data-kt-search-keypress="true"
-      data-kt-search-min-length="2" data-kt-search-enter="enter" data-kt-search-layout="menu"
-      data-kt-menu-trigger="{default: 'hover'}" data-kt-menu-overflow="false" data-kt-menu-permanent="true"
-      data-kt-menu-placement="bottom-end" data-kt-search="true">
-      <!--begin::Search toggle-->
-      <div class="d-flex align-items-center" data-kt-search-element="toggle" id="kt_header_search_toggle">
-        <div>
-          <!-- <app-keenicon name="magnifier" [class]="btnIconClass"></app-keenicon> -->
-          <img src="../../assets/images/icons/Vector (4).png" height="24" width="24"/>
-        </div>
-      </div>
-      <!--end::Search toggle-->
-      <!-- <app-search-result-inner data-kt-search-element="content" data-kt-menu="true"
-        class="menu menu-sub menu-sub-dropdown p-7 w-325px w-md-375px"></app-search-result-inner> -->
+    <div class="border-end p-2">
+      <h6 class="text-center">Communidad</h6>
+      <div style="color: red;">Perdida: MX0.00</div>
+      <div>Comision: MX 1,525.20</div>
     </div>
-  
-  </div>
-  <!--end::Search-->
-  
-  <!--begin::Quick links-->
-  <div class="app-navbar-item">
-    <!--begin::Menu wrapper-->
-    <div data-kt-menu-trigger="click" data-kt-menu-attach="parent"
-    data-kt-menu-placement="bottom-end">
-    <img src="../../assets/images/icons/calender.png" height="24" width="24"/>
-  </div>
-  <!--end::Menu wrapper-->
-  <!-- <app-quick-links-inner></app-quick-links-inner> -->
-  </div>
-  <!--end::Quick links-->
-  
-  <!--begin::Activities-->
-  <div class="app-navbar-item">
-    <!--begin::Drawer toggle-->
-    <div id="kt_activities_toggle">
-      <img src="../../assets/images/icons/whatsapp.png" height="24" width="24"/>
+
+    <div class="border-end p-2">
+      <h6 class="text-center">Instalado</h6>
+      <div>30 Dias: MX33.140.00</div>
+      <div>En Semena: MX990.00</div>
     </div>
-    <!--end::Drawer toggle-->
-  </div>
-  <!--end::Activities-->
-  
-  
-  <!--begin::Chat-->
-  <div class="app-navbar-item">
-    <div class="position-relative" id="kt_drawer_chat_toggle">
-      <img src="../../assets/images/icons/chat.png" height="24" width="24"/>
-      <span
-      class="bullet bullet-dot bg-success h-6px w-6px position-absolute translate-middle top-0 start-50 animation-blink">
-    </span>
-  </div>
-  </div>
-  <!--end::Chat-->
-  
-  
-  <!--begin::Notifications-->
-  <div class="app-navbar-item">
-    <!--begin::Menu- wrapper-->
-    <div data-kt-menu-trigger="{default: 'click', lg: 'hover'}" data-kt-menu-attach="parent"
-      data-kt-menu-placement="bottom-end">
-      <img src="../../../../../../assets/media/pakoa/notification.png" height="24" width="24"/>
+
+    <div class="border-end p-2">
+      <h6 class="text-center">Cancelado</h6>
+      <div style="color: red;">En Semana: MX0.00</div>
+      <div style="color: red;">Semana Ant: MX480.00</div>
     </div>
-    <!-- <app-notifications-inner></app-notifications-inner> -->
-    <!--end::Menu wrapper-->
+
+    <div class="p-2">
+      <h6 class="text-center">Caidas</h6>
+      <div style="color: red;">En Semana: 0</div>
+      <div style="color: red;">Sem Anterior: 0</div>
+    </div>
+
+    <div>
+      <img src="../../assets/images/An blue turquoise lotus emitting a bright blue lig 1 1.png" width="61" height="43"
+        alt="blue flower" />
+    </div>
   </div>
-  <!--end::Notifications-->
-  
-  <!--begin::User menu-->
-  <div class="app-navbar-item">
-    <!--begin::Menu wrapper-->
-    <div class="cursor-pointer d-flex" data-kt-menu-trigger="{default: 'click'}" data-kt-menu-attach="parent" data-kt-menu-placement="bottom-end">
+
+  <!-- icons  -->
+  <div class="d-flex align-items-center">
+
+    <div class="app-navbar-item me-3">
+      <label class="switch">
+        <input type="checkbox">
+        <span class="slider round"></span>
+      </label>
+    </div>
+
+
+    <div class="app-navbar-item me-3">
+      <img src="../../assets/images/icons/Vector (4).png" height="18" width="18" />
+    </div>
+
+    <div class="app-navbar-item me-3">
+      <img src="../../assets/images/icons/calender.png" height="18" width="18" />
+    </div>
+
+    <div class="app-navbar-item me-3">
+      <img src="../../assets/images/icons/whatsapp.png" height="18" width="18" />
+    </div>
+
+
+    <div class="app-navbar-item me-3">
+      <img src="../../assets/images/icons/chat.png" height="18" width="18" />
+    </div>
+
+    <a href="#" class="notification me-3">
+      <img src="../../assets/images/icons/notification.png" height="18" width="18" />
+      <span class="badge">1</span>
+    </a>
+
+    <div class="app-navbar-item d-flex align-items-center">
       <img src="../../assets/images/avatar/Ellipse 1.png" />
       <p>Andrea</p>
-      <img src="../../assets/images/icons/arrow.png" height="24" width="24"/>
+      <img src="../../assets/images/icons/arrow.png" height="18" width="18" />
     </div>
-    <!--end::Menu wrapper-->
+
   </div>
-  <!--end::User menu-->
-  
-  <!--begin::Header menu toggle-->
-  <ng-container >
-    <div class="app-navbar-item d-lg-none ms-2 me-n3" title="Show header menu">
-      <div class="btn btn-icon btn-active-color-primary w-35px h-35px" id="kt_app_header_menu_toggle">
-        
-      </div>
-    </div>
-  </ng-container>
-  <!--end::Header menu toggle-->
 </div>
