--- a/src/app/miperfile/miperfile.component.html
+++ b/src/app/miperfile/miperfile.component.html
@@ -1,10 +1,191 @@
 <!-- page title  -->
-<div class="d-flex">
+<div class="d-flex border-bottom p-3 align-items-baseline">
     <h2>Mi Perfile</h2>
-    <h6 class="ms-3">Administracion de perfile</h6>
+    <h4 class="ms-3 title fw-light">Administracion de perfile</h4>
 </div>
-<div class="main">
-    <div class="back">
-        
+<div class="main p-4">
+    <!-- first section  -->
+    <div class="div1 p-5 mb-2">
+        <div class="d-flex justify-content-between mb-3">
+            <!-- left section  -->
+            <div class="welcome align-items-center p-3">
+                <div class="d-flex justify-content-between">
+                    <div class="me-3">
+                        <img class="d-block m-auto" src="../../assets/images/avatar/Ellipse 4.png" width="70" height="70" alt="">
+                        <div class="d-flex justify-content-between">
+                            <img src="../../assets/images/weapons/CategoriaBronce 1.png" width="40" height="40" alt="">
+                            <img src="../../assets/images/weapons/CategoriaOro 1.png" width="40" height="40" alt="">
+                            <img src="../../assets/images/weapons/CategoriaPlata 1.png" width="40" height="40" alt="">
+                        </div>
+                    </div>
+                    <div>
+                        <h5 class="green">WELCOME!</h5>
+                        <h5 class="fw-bold text-white">ANDREA YAMILET RANGEL
+                            QUIROZ</h5>
+                        <h5 class="text-white fw-light">Meta Manager</h5>
+                    </div>
+                    <div>
+                        <button type="button">...</button>
+                    </div>
+                </div>
+                <div class="d-flex justify-content-between mb-3">
+                    <div class="cards align-items-center p-2">
+                        <img class="card-img-top p-2" src="../../assets/images/weapons/QuetzalIniciatico64px 1.png"
+                            width="71" height="75" alt="Card image">
+                    </div>
+                    <div class="cards">
+                        <img src="../../assets/images/weapons/CoronaPrincipe100 2.png" width="99" height="99"
+                            alt="Card image">
+                    </div>
+                    <div class="cards">
+                        <img src="../../assets/images/weapons/PenachoPakoa100 2.png" width="108" height="102"
+                            alt="Card image">
+                    </div>
+
+                </div>
+            </div>
+            <!-- right section  -->
+            <div class="welcome p-3">
+                <div class="d-flex justify-content-end mb-2">
+                    <button type="button">...</button>
+                </div>
+
+                <div class="mb-3">
+                    <div class="d-flex justify-content-between">
+                        <p class="text-white fs-6">Instalado 30 dias $33140</p>
+                        <p class="fs-6" style="color:#FFD643">100%</p>
+                    </div>
+                    <div class="progress box" style="height: 9px">
+                        <div class="progress-bar full rounded" style="width:100%"></div>
+                    </div>
+                </div>
+
+                <div class="mb-3">
+                    <div class="d-flex justify-content-between">
+                        <p class="text-white fs-6">Instalado Semanal $990</p>
+                        <p class="text-white fs-6">25%</p>
+                    </div>
+                    <div class="progress" style="height: 9px">
+                        <div class="progress-bar low rounded" style="width:25%"></div>
+                    </div>
+                </div>
+
+                <div>
+                    <div class="d-flex justify-content-between">
+                        <p class="text-white fs-6">Vendido Semanal $7080</p>
+                        <p class="text-white fs-6">76%</p>
+                    </div>
+                    <div>
+                        <div class="progress" style="height: 9px">
+                            <div class="progress-bar good rounded" style="width:76%"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <h6 class="text-white fw-bold">Mis trofeos</h6>
+        <div class="d-flex justify-content-between mb-3">
+            <div class="card align-items-center p-2">
+                <img class="card-img-top p-2" src="../../assets/images/weapons/QuetzalIniciatico64px 1.png" width="71"
+                    height="75" alt="Card image">
+                <div class="card-body">
+                    <p class="card-text text-white">Quetzal Inciatico</p>
+                </div>
+            </div>
+
+            <div class="card align-items-center p-2">
+                <img class="card-img-top p-2"
+                    src="../../assets/images/weapons/replicate-prediction-zku5kqdbtj2f7fn5s23sdpqowe 1.png" width="71"
+                    height="75" alt="Card image">
+                <div class="card-body">
+                    <p class="card-text text-white">Llave del Reino</p>
+                </div>
+            </div>
+
+            <div class="card align-items-center p-2">
+                <img class="card-img-top p-2" src="../../assets/images/weapons/LlaveQuetzal64px 1.png" width="71"
+                    height="75" alt="Card image">
+                <div class="card-body">
+                    <p class="card-text text-white">Llave del Quetzal</p>
+                </div>
+            </div>
+
+            <div class="card align-items-center p-2">
+                <img class="card-img-top p-2" src="../../assets/images/weapons/LlaveDragon64px 1.png" width="60"
+                    height="70" alt="Card image">
+                <div class="card-body">
+                    <p class="card-text text-white">Llave del Dragon</p>
+                </div>
+            </div>
+
+            <div class="card align-items-center p-2">
+                <img class="card-img-top p-2" src="../../assets/images/weapons/EsmeraldaPakoa64px 1.png" width="60"
+                    height="70" alt="Card image">
+                <div class="card-body">
+                    <p class="card-text text-white">Esmeralda de pakoa</p>
+                </div>
+            </div>
+
+        </div>
+        <div class="d-flex justify-content-between">
+            <div class="card align-items-center p-2">
+                <img class="card-img-top p-2" src="../../assets/images/weapons/DagaAncestral 1.png" width="71"
+                    height="75" alt="Card image">
+                <div class="card-body">
+                    <p class="card-text text-white">Daga Ancestral</p>
+                </div>
+            </div>
+
+            <div class="card align-items-center p-2">
+                <img class="card-img-top p-2"
+                    src="../../assets/images/weapons/replicate-prediction-zku5kqdbtj2f7fn5s23sdpqowe 1.png" width="71"
+                    height="75" alt="Card image">
+                <div class="card-body">
+                    <p class="card-text text-white">Sello del Aprendiz de Agua</p>
+                </div>
+            </div>
+
+            <div class="card align-items-center p-2">
+                <img class="card-img-top p-2" src="../../assets/images/weapons/2daCascada64px 1.png" width="71"
+                    height="75" alt="Card image">
+                <div class="card-body">
+                    <p class="card-text text-white">Sortiza del Maestro de Agua</p>
+                </div>
+            </div>
+
+            <div class="card align-items-center p-2">
+                <img class="card-img-top p-2" src="../../assets/images/weapons/3erCascada64px 1.png" width="60"
+                    height="70" alt="Card image">
+                <div class="card-body">
+                    <p class="card-text text-white">Llave del Reino</p>
+                </div>
+            </div>
+
+            <div class="card align-items-center p-2">
+                <img class="card-img-top p-2" src="../../assets/images/weapons/MetaTrono64x64px 1.png" width="60"
+                    height="70" alt="Card image">
+                <div class="card-body">
+                    <p class="card-text text-white">Llave del Reino</p>
+                </div>
+            </div>
+
+        </div>
     </div>
+    <div class="back">
+        2
+    </div>
+    <div class="back">
+        3
+    </div>
+    <div class="back">
+        4
+    </div>
+    <div class="back">
+        5
+    </div>
+    <div class="back">
+        6
+    </div>
+
 </div>
