--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,17 @@
-/* You can add global styles to this file, and also import other style files */
+p {
+    font-size: 8px;
+}
+
+h2 {
+    font-size: 1.4rem;
+}
+
+h3 {
+    font-size: 1rem;
+}
+h4 {
+    font-size: 0.87rem;
+}
+h5 {
+    font-size: 0.74rem;
+}
