--- a/src/app/miperfile/miperfile.component.html
+++ b/src/app/miperfile/miperfile.component.html
@@ -172,9 +172,16 @@
 
         </div>
     </div>
-    <div class="back">
-        2
+    
+    <!-- top 20 slider  -->
+    <div class="back p-5">
+       <h4>Top 20 MetaManagers</h4>
+       <p class="fs-6">Instalado 30 dias</p>
+       <div class="top20  d-flex justify-content-center align-items-center p-3">
+        <app-top-20-slider></app-top-20-slider>
+       </div>
     </div>
+
     <div class="back">
         3
     </div>
