--- a/src/app/miperfile/miperfile.component.css
+++ b/src/app/miperfile/miperfile.component.css
@@ -82,3 +82,9 @@ button {
     border-radius: 12px;
     box-shadow: 0px 0px 10px;
 }
+
+.rend {
+    border: 1px solid #D8D8D8;
+    border-radius: 12px;
+}
+
