--- a/src/app/miperfile/miperfile.component.html
+++ b/src/app/miperfile/miperfile.component.html
@@ -1,9 +1,9 @@
 <!-- page title  -->
 <div class="d-flex border-bottom p-3 align-items-baseline">
     <h2>Mi Perfile</h2>
-    <h4 class="ms-3 title fw-light">Administracion de perfile</h4>
+    <h4 class="ms-3 title fw-light greytext">Administracion de perfile</h4>
 </div>
-<div class="main p-4">
+<div class="main p-3">
     <!-- first section  -->
     <div class="div1 p-5 mb-2">
         <div class="d-flex justify-content-between mb-3">
@@ -11,7 +11,8 @@
             <div class="welcome align-items-center p-3">
                 <div class="d-flex justify-content-between">
                     <div class="me-3">
-                        <img class="d-block m-auto" src="../../assets/images/avatar/Ellipse 4.png" width="70" height="70" alt="">
+                        <img class="d-block m-auto" src="../../assets/images/avatar/Ellipse 4.png" width="70"
+                            height="70" alt="">
                         <div class="d-flex justify-content-between">
                             <img src="../../assets/images/weapons/CategoriaBronce 1.png" width="40" height="40" alt="">
                             <img src="../../assets/images/weapons/CategoriaOro 1.png" width="40" height="40" alt="">
@@ -172,27 +173,211 @@
 
         </div>
     </div>
-    
+
     <!-- top 20 slider  -->
-    <div class="back p-5">
-       <h4>Top 20 MetaManagers</h4>
-       <p class="fs-6">Instalado 30 dias</p>
-       <div class="top20  d-flex justify-content-center align-items-center p-3">
-        <app-top-20-slider></app-top-20-slider>
-       </div>
+    <div class="p-3">
+        <div class="d-flex justify-content-between">
+            <div>
+                <h4>Top 20 MetaManagers</h4>
+                <p class="fs-6 greytext">Instalado 30 dias</p>
+            </div>
+            <div class="">
+                <a href="#">See All</a>
+                <img src="../../assets/images/icons/info.png" width="25" height="25" class="ms-3" alt="">
+            </div>
+        </div>
+        <div class="top20  d-flex justify-content-center align-items-center p-3">
+            <app-top-20-slider></app-top-20-slider>
+        </div>
     </div>
 
-    <div class="back">
-        3
-    </div>
-    <div class="back">
-        4
-    </div>
-    <div class="back">
-        5
-    </div>
-    <div class="back">
-        6
+    <!-- bar chart section  -->
+    <div class="p-3">
+        <div class="d-flex justify-content-between">
+            <div>
+                <h4>Communidades Vendiendo</h4>
+                <p class="fs-6 greytext">Instalado 30 dias</p>
+            </div>
+            <div>
+                <form>
+                    <div class="input-group">
+                        <span class="input-group-text text-bg-light"><i class="bi bi-calendar-minus"></i></span>
+                        <select class="form-select bg-white" disabled>
+                            <option>01/02/2024</option>
+                            <option>02/2/2024</option>
+                            <option>03/02/2024</option>
+                        </select>
+                    </div>
+                </form>
+
+            </div>
+        </div>
+
+        <div class="top20  d-flex justify-content-center align-items-center p-3">
+            <app-bar-chart></app-bar-chart>
+        </div>
     </div>
 
-</div>
+    <!-- mi progreso  -->
+    <div class="p-3">
+        <div class="d-flex justify-content-between">
+            <div>
+                <h4>Mi Progreso</h4>
+                <p class="fs-6 greytext">Instalado 30 dias</p>
+            </div>
+            <div>
+                <form>
+                    <div class="input-group">
+                        <span class="input-group-text text-bg-light"><i class="bi bi-calendar-minus"></i></span>
+                        <select class="form-select bg-white" disabled>
+                            <option>semana 3</option>
+                            <option>Semana 4</option>
+                            <option>Semana 5</option>
+                        </select>
+                    </div>
+                </form>
+
+            </div>
+        </div>
+
+        <div class="top20 p-3">
+
+            <div class="d-flex justify-content-between">
+                <div class="d-flex rend p-2 m-2">
+                    <div class="me-3 d-block m-auto">
+                        <img src="../../assets/images/weapons/My progress 1.png" width="65" height="80" alt="">
+                    </div>
+                    <div class="border-end ms-2">
+                        <p class="h6">Candados Abiertos</p>
+                        <p class="fw-bold fs-6" style="line-height: 20%; color: #E0B244">MX16,322.23</p>
+                        <p class="fs-6 greytext">Semana: 3</p>
+                    </div>
+                    <div class="ms-2">
+                        <p class="h6">Mamixmo Historico</p>
+                        <p class="fw-bold fs-6" style="line-height: 20%; color: #A0DB1A">MX16,322.23</p>
+                        <p class="fs-6 greytext">Semana: 1</p>
+                    </div>
+                </div>
+                <div class="d-flex rend p-2 m-2" style="background-color: #F8FCFF;">
+                    <div class="me-3 d-block m-auto">
+                        <img src="../../assets/images/weapons/Piramide-Consecutivos 1.png" width="65" height="80"
+                            alt="">
+                    </div>
+                    <div class="border-end ms-2">
+                        <p class="h6">Candados Abiertos</p>
+                        <p class="fw-bold fs-6" style="line-height: 20%; color: #E0B244">MX16,322.23</p>
+                        <p class="fs-6 greytext">Semana: 3</p>
+                    </div>
+                    <div class="ms-2">
+                        <p class="h6">Mamixmo Historico</p>
+                        <p class="fw-bold fs-6" style="line-height: 20%; color: #A0DB1A">MX16,322.23</p>
+                        <p class="fs-6 greytext">Semana: 1</p>
+                    </div>
+                </div>
+                <div class="d-flex rend p-2 m-2">
+                    <div class="me-3 d-block m-auto">
+                        <img src="../../assets/images/weapons/replicate-prediction-zku5kqdbtj2f7fn5s23sdpqowe 1.png"
+                            width="65" height="80" alt="">
+                    </div>
+                    <div class="border-end ms-2">
+                        <p class="h6">Candados Abiertos</p>
+                        <p class="fw-bold fs-6" style="line-height: 20%; color: #E0B244">MX16,322.23</p>
+                        <p class="fs-6 greytext">Semana: 3</p>
+                    </div>
+                    <div class="ms-2">
+                        <p class="h6">Mamixmo Historico</p>
+                        <p class="fw-bold fs-6" style="line-height: 20%; color: #A0DB1A">MX16,322.23</p>
+                        <p class="fs-6 greytext">Semana: 1</p>
+                    </div>
+                </div>
+            </div>
+
+
+
+            <div class="d-flex justify-content-between">
+                <div class="d-flex rend p-2 m-2"  style="background-color: #F8FCFF;">
+                    <div class="me-3 d-block m-auto">
+                        <img src="../../assets/images/weapons/HijosFull 1.png" width="65" height="80" alt="">
+                    </div>
+                    <div class="border-end ms-2 ">
+                        <p class="h6">Hijos Vendiendo</p>
+                        <p class="fw-bold fs-6" style="line-height: 20%; color: #E0B244">2</p>
+                        <p class="fs-6 greytext">Semana: 3</p>
+                    </div>
+                    <div class="ms-2">
+                        <p class="h6">Mamixmo Historico</p>
+                        <p class="fw-bold fs-6" style="line-height: 20%; color: #A0DB1A">5</p>
+                        <p class="fs-6 greytext">Semana: 1</p>
+                    </div>
+                </div>
+                <div class="d-flex rend p-2 m-2">
+                    <div class="me-3 d-block m-auto">
+                        <img src="../../assets/images/weapons/NietosFull 1.png" width="65" height="80"
+                            alt="">
+                    </div>
+                    <div class="border-end ms-2">
+                        <p class="h6">Nietos Vendiedo</p>
+                        <p class="fw-bold fs-6" style="line-height: 20%; color: #E0B244">4</p>
+                        <p class="fs-6 greytext">Semana: 3</p>
+                    </div>
+                    <div class="ms-2">
+                        <p class="h6">Mamixmo Historico</p>
+                        <p class="fw-bold fs-6" style="line-height: 20%; color: #A0DB1A">6</p>
+                        <p class="fs-6 greytext">Semana: 1</p>
+                    </div>
+                </div>
+                <div class="d-flex rend p-2 m-2" style="background-color: #F8FCFF;">
+                    <div class="me-3 d-block m-auto">
+                        <img src="../../assets/images/weapons/BisNietosFull 1.png" width="65" height="80"
+                            alt="">
+                    </div>
+                    <div class="border-end ms-2">
+                        <p class="h6">Bisnietos Vendiedo</p>
+                        <p class="fw-bold fs-6" style="line-height: 20%; color: #E0B244">4</p>
+                        <p class="fs-6 greytext">Semana: 3</p>
+                    </div>
+                    <div class="ms-2">
+                        <p class="h6">Mamixmo Historico</p>
+                        <p class="fw-bold fs-6" style="line-height: 20%; color: #A0DB1A">14</p>
+                        <p class="fs-6 greytext">Semana: 1</p>
+                    </div>
+                </div>
+            </div>
+
+
+        </div>
+    </div>
+
+    <!-- mi rendimento  -->
+    <div class="p-3">
+        <h4>Mi Rendimento</h4>
+
+    </div>
+
+    <!-- Resultados por fecha -->
+    <div class="p-3">
+        <div class="d-flex justify-content-between">
+            <div>
+                <h4>Mi Progreso</h4>
+                <p class="fs-6 greytext">Instalado 30 dias</p>
+            </div>
+            <div>
+                <form>
+                    <div class="input-group">
+                        <span class="input-group-text text-bg-light"><i class="bi bi-calendar-minus"></i></span>
+                        <select class="form-select bg-white" disabled>
+                            <option>semana 3</option>
+                            <option>Semana 4</option>
+                            <option>Semana 5</option>
+                        </select>
+                    </div>
+                </form>
+
+            </div>
+        </div>
+
+        <div class="top20  d-flex justify-content-center align-items-center p-3">
+            <app-bar-chart></app-bar-chart>
+        </div>
+
+    </div>
